:recycle: refactor: organização do js com modules

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </li>
     </ul>
     <div class="animais-descricao" data-tab="content">
-      <section data-anime="show-right">
+      <section data-anime="scroll">
         <h2>Raposa</h2>
         <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio,
           caracterizados
@@ -146,7 +146,7 @@
     <p>Todos os direitos reservados.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
