--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.
           </p>
         </section>
-        <section ddata-anime="show-right">
+        <section data-anime="show-right">
           <h2>Macaco</h2>
           <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio,
             caracterizados
