--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <nav class="menu" data-menu="suave"="">
       <ul>
         <li><a href="#animais">Animais</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
         <li><a href="#faq">Faq</a></li>
         <li><a href="#contato">Contato</a></li>
         <li><a data-modal="abrir" href="login.html">Login</a></li>
